force-app/main/default/objects/Case_Contact__c/fields/Address_4__c.field-meta.xml
<CustomField>
    <fullName>Address_4__c</fullName>
    <label>Address 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>