force-app/main/default/objects/Case_Contact__c/fields/Admitted__c.field-meta.xml
<CustomField>
    <fullName>Admitted__c</fullName>
    <label>Admitted</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>