force-app/main/default/objects/Case_Contact__c/fields/Executors_Email__c.field-meta.xml
<CustomField>
    <fullName>Executors_Email__c</fullName>
    <label>Executors Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>