force-app/main/default/objects/Case_Contact__c/fields/Executors_Reference__c.field-meta.xml
<CustomField>
    <fullName>Executors_Reference__c</fullName>
    <label>Executors Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>