force-app/main/default/objects/Case_Contact__c/fields/Genealogist__c.field-meta.xml
<CustomField>
    <fullName>Genealogist__c</fullName>
    <label>Genealogist</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>