force-app/main/default/objects/Case_Contact__c/fields/Genealogist_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Genealogist_Address_2__c</fullName>
    <label>Genealogist Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>