force-app/main/default/objects/Case_Contact__c/fields/Genealogist_Email__c.field-meta.xml
<CustomField>
    <fullName>Genealogist_Email__c</fullName>
    <label>Genealogist Email</label>
    <type>Email</type>
</CustomField>