force-app/main/default/objects/Case_Contact__c/fields/Genealogist_Fax__c.field-meta.xml
<CustomField>
    <fullName>Genealogist_Fax__c</fullName>
    <label>Genealogist Fax</label>
    <length>255</length>
    <type>Text</type>
</CustomField>