force-app/main/default/objects/Case_Contact__c/fields/Grounds__c.field-meta.xml
<CustomField>
    <fullName>Grounds__c</fullName>
    <label>Grounds</label>
    <length>255</length>
    <type>Text</type>
</CustomField>