force-app/main/default/objects/Case_Contact__c/fields/Informant__c.field-meta.xml
<CustomField>
    <fullName>Informant__c</fullName>
    <label>Informant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>