force-app/main/default/objects/Case_Contact__c/fields/Informant_Type_for_the_historic_unclaim__c.field-meta.xml
<CustomField>
    <fullName>Informant_Type_for_the_historic_unclaim__c</fullName>
    <label>Informant Type (for the historic unclaim</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Needs values</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>