force-app/main/default/objects/Case_Contact__c/fields/Other_Addressee__c.field-meta.xml
<CustomField>
    <fullName>Other_Addressee__c</fullName>
    <label>Other Addressee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>