force-app/main/default/objects/Case_Contact__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Phone</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>