force-app/main/default/objects/Case_Contact__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <label>Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>