force-app/main/default/objects/Case_Contact__c/fields/Telephone_Number__c.field-meta.xml
<CustomField>
    <fullName>Telephone_Number__c</fullName>
    <label>Telephone Number</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>