force-app/main/default/objects/Case_Contact__c/recordTypes/Administrator.recordType-meta.xml
<RecordType>
    <fullName>Administrator</fullName>
    <active>true</active>
    <label>Administrator</label>
</RecordType>