force-app/main/default/objects/Case_Contact__c/recordTypes/Claimant_s_Solicitors.recordType-meta.xml
<RecordType>
    <fullName>Claimant_s_Solicitors</fullName>
    <active>true</active>
    <label>Claimant&apos;s Solicitors</label>
</RecordType>