force-app/main/default/objects/Case_Contact__c/recordTypes/Informant.recordType-meta.xml
<RecordType>
    <fullName>Informant</fullName>
    <active>true</active>
    <label>Informant</label>
</RecordType>